# Screw_and_Bolts_recognition

./: .gitignore  README.md
ros2_ws/src/arduino_control_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/arduino_control_pkg/arduino/servo_led_controller/: servo_led_controller.ino
ros2_ws/src/arduino_control_pkg/arduino_control_pkg/: arduino_control_node.py
ros2_ws/src/camera_calibration_pkg/: fisheye_camera.yaml  package.xml  setup.cfg  setup.py
ros2_ws/src/camera_calibration_pkg/camera_calibration_pkg/: capture_images_node.py  fisheye_calibration_service.py
ros2_ws/src/camera_pkg/: fisheye_camera.yaml  package.xml  setup.py
ros2_ws/src/camera_pkg/camera_pkg/: background_removal_node.py  camera_calibrated_node.py  camera_calibrator.py  camera_visualizer_node.py  canny_node.py  contour_detection_node.py  first_camera_node_linux_native.py  first_camera_node_windows_native.py  gaussian_blur.py  grey_scaled_node.py  min_rect_area.py  morphological_closure.py  otsu_thresholding.py  physical_features_extraction.py
ros2_ws/src/camera_pkg/launch/: camera_launch.py
ros2_ws/src/cnc_control_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/cnc_control_pkg/cnc_control_pkg/: cnc_motion_coordinator.py  cnc_serial_controller.py  joystick_cnc_control.py
ros2_ws/src/screw_bolts_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/screw_bolts_bringup/launch/: bringup.launch.py
ros2_ws/src/services_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/services_pkg/srv/: SetLightColor.srv  SetServo.srv
