<?xml version="1.0"?>
<package format="3">
  <name>arduino_control_pkg</name>
  <version>0.0.0</version>
  <description>Arduino control: servos and LEDs over ROS2 services</description>
  <maintainer email="wmsi@todo.todo">wmsi</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>services_pkg</depend>  <!-- Add this! -->
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>